{{$NEXT}}

v0.1.1  2014-06-18 12:40:42 CEST
    - support fixed column widths and truncation

v0.1.0  2014-06-15 10:39:39 CEST
    - inital release