@@ -1,4 +1,4 @@
 # This Build.PL for Catmandu-Exporter-Table was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use v5.10.0;
-use Module::Build::Tiny 0.035;
+use Module::Build::Tiny 0.036;
 Build_PL();
