@@ -26,7 +26,7 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.035"
+            "Module::Build::Tiny" : "0.036"
          }
       },
       "develop" : {
@@ -53,7 +53,7 @@
          "web" : "https://github.com/nichtich/Catmandu-Exporter-Table"
       }
    },
-   "version" : "v0.1.1",
+   "version" : "0.1.2",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
