@@ -11,7 +11,7 @@ Catmandu::Exporter::Table - ASCII/Markdown table exporter
     | my  | table |
     | is  | nice  |
 
-    catmandu convert CSV to Table --fields id,name --columns ID,Name < sample.csv
+    catmandu convert CSV to Table --fields id,name --header ID,Name < sample.csv
     | ID | Name |
     |----|------|
     | 23 | foo  |
@@ -32,22 +32,20 @@ truncated.
 
     Array, hash reference, or comma-separated list of fields/columns.
 
-- columns
+- header
 
     Column names. By default field names are used.
 
 - widths
 
     Column widths. By default column widths are calculated automatically to the
-    width of the widest value. With cusom width, large values may be truncated.
+    width of the widest value. With custom width, large values may be truncated.
 
-# CONTRIBUTING
+# METHODS
 
-This module is managed it a git repository hosted at
-[https://github.com/nichtich/Catmandu-Exporter-Table](https://github.com/nichtich/Catmandu-Exporter-Table). Bug reports, feature
-requests, and pull requests are welcome. The distribution is packaged with
-[Dist::Milla](https://metacpan.org/pod/Dist::Milla).
+See [Catmandu::Exporter](https://metacpan.org/pod/Catmandu::Exporter), [Catmandu::Addable](https://metacpan.org/pod/Catmandu::Addable), [Catmandu::Fixable](https://metacpan.org/pod/Catmandu::Fixable),
+[Catmandu::Counter](https://metacpan.org/pod/Catmandu::Counter), and [Catmandu::Logger](https://metacpan.org/pod/Catmandu::Logger) for a full list of methods.
 
 # SEE ALSO
 
-Parts of this module have been copied from [Catmandu::Exporter::CSV](https://metacpan.org/pod/Catmandu::Exporter::CSV).
+[Catmandu::Exporter::CSV](https://metacpan.org/pod/Catmandu::Exporter::CSV)
